# chimera

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXPERIMENT_SUMMARY.txt  Makefile  README.md  README_EXPERIMENT.md  add-admin-wallet.sh  audit.toml  authenticate-and-merge.sh  config.yaml  deploy-production.sh  derive-wallet.py  diagnose-degraded.sh  diagnose-trading.sh  docker-compose-haproxy.yml  docker-compose.README.md  docker-compose.evaluation.yml  docker-compose.prod.yml  docker-compose.yml  evaluate-performance.sh  final-production-deploy.sh  fix-compose.sh  merge-roster.sh  minimal-production-deploy.sh  prod-deploy.sh  production-deploy-simple.sh  production-deploy.sh  restart-mainnet-paper.sh  run-forward-test.sh  run-fresh-paper-trade.sh  setup-1000-virtual-capital.sh  setup-mainnet-paper.sh  setup-ngrok.sh  setup-production.sh  setup-test-wallet.sh  (+6 more)
operator/: .dockerignore  Cargo.toml  Dockerfile
operator/benches/: metadata.rs  worker_pool.rs  write_queue.rs
operator/database/migrations/: 20240618_telegram_signal_support.sql
operator/migrations/: 0001_full_schema.sql  20230101000000_init.sql  20250101000000_add_remaining_fraction.sql  20250102000000_add_wqs_confidence.sql  20250103000000_fix_financial_types.sql  20260627000000_add_net_pnl_and_network_fee.sql  20260704000000_downsize_active_roster.sql
operator/migrations_postgres/: 0001_full_schema.sql  0002_seed_circuit_breaker_state.sql  0003_fix_numeric_precision.sql  0004_ml_predictions.sql
operator/src/: circuit_breaker.rs  config.rs  constants.rs  db.rs  error.rs  jupiter.rs  jupiter_error_handling.rs  jupiter_http_client.rs  jupiter_monitoring.rs  jupiter_skills_integration.rs  keypair_utils.rs  lib.rs  main.rs  metrics.rs  price_cache.rs  retry.rs  roster.rs  utils.rs  vault.rs
operator/src/db/: experiment_schema.sql
operator/src/db_abstraction/: dual_write.rs  export.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
operator/src/engine/: channel.rs  degradation.rs  dex_comparator.rs  execution_lock.rs  executor.rs  jito_searcher.rs  kelly_sizer.rs  market_regime.rs  mev_protection.rs  mod.rs  momentum_exit.rs  portfolio_heat.rs  position_sizer.rs  profit_targets.rs  reconciliation.rs  recovery.rs  rent_scavenger.rs  rpc_cache.rs  signal_pipeline.rs  signal_quality.rs  slippage.rs  (+7 more)
operator/tests/: chaos_tests.rs  integration.rs  integration_tests.rs  liquidity_cache_test.rs  load_tests.rs  mod.rs  phase0_validation_tests.rs  pre_validator_test.rs  precision_regression_tests.rs  queue_saturation_test.rs  reconciliation_tests.rs  test_atr_stop_loss.rs  test_cache_ttl_defaults.rs  test_decimals_cache.rs  test_helius_websocket.rs  test_volume_cache.rs  token_safety_tests.rs  unit.rs  worker_pool_tests.rs
scout/: .dockerignore  .env.example  Dockerfile  POST_INTEGRATION_ANALYSIS.md  SPRINT_1_SUMMARY.md  SPRINT_2_SUMMARY.md  SPRINT_3_SUMMARY.md  SPRINT_4_COMPLETION_REPORT.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  auto_merge_watcher.py  code.txt  config.py  main.py  predictive_budget_state.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema_scout_tables.sql  schema_scout_tables_sqlite.sql  setup_config.sh  signal_quality_filter_state.json  telegram_collector.py  telegram_collector.session  telegram_collector.session-journal  test_cache_integration.py  test_multiframe_discovery_integration.py  test_profitable_wallets.py  test_signal_quality_filter_integration.py  test_state_persistence_integration.py  test_stop_loss_integration.py  test_transaction_parser.py  test_validation_reporter_integration.py  verify_all_integrations.py
scout/config/: active_tokens.txt  exchange_funders.txt  seed_wallets.txt  wallets.txt
scout/core/: __init__.py  activity_cache.py  adaptive_weights.py  advanced_cache.py  advanced_risk_features.py  analyzer.py  api_health_monitor.py  auto_merge.py  backtester.py  birdeye_client.py  caching.py  circuit_breaker.py  cluster_ensemble.py  clustering.py  correlation_backfill.py  correlation_reader.py  cost_estimator.py  db.py  db_writer.py  decimal_utils.py  degradation.py  denylist.py  dependency_batcher.py  ensemble_predictor.py  feature_enrichment.py  feature_store.py  gradient_boost_predictor.py  helius_client.py  helius_credit_tracker.py  helius_optimizer.py  high_conviction_allocator.py  hyperopt.py  in_sample.py  laserstream_client.py  liquidity.py  liquidity_collector.py  market_context_features.py  market_regime_detector.py  meta_learner.py  metrics.py  (+47 more)
scout/data/: wqs_default_weights.json
scout/docs/: SCOUT_OPTIMIZATIONS.md  wallet-discovery.md
scout/examples/: optimization_integration.py
scout/integrations/: __init__.py  high_conviction_integration.py
scout/scripts/: __init__.py  backfill_historical_correlation.py  bench_baseline.py  capture_fixtures.py  evaluate_models.py  populate_real_training_data.py  run_shakedown_test.sh  run_validation.py  setup_experiment.py  train_ml_models.py  validate_wqs_predictiveness.py  verdict.py
scout/tests/: __init__.py  conftest.py  test_activity_cache_integration.py  test_advanced_cache_growth.py  test_arbitrage_detection.py  test_auto_merge.py  test_backfill.py  test_backtester.py  test_backtester_historical_liquidity.py  test_batch_processing.py  test_bot_detection.py  test_clustering.py  test_cost_estimator.py  test_credit_tracking.py  test_db.py  test_db_writer.py  test_delay_slippage.py  test_denylist.py  test_discovery_integration.py  test_enhanced_metrics.py  test_growth_tracking.py  test_helius_429_handling.py  test_helius_discovery.py  test_high_conviction_integration.py  test_historical_liquidity.py  test_liquidity.py  test_prediction_validation.py  test_predictive_budget_integration.py  test_replay_fidelity.py  test_roster_writer_db.py  test_rugcheck_fail_mode.py  test_slippage_edge_cases.py  test_token_2022_extensions.py  test_token_age_edge_cases.py  test_token_security_cache.py  test_validator.py  test_wqs.py  test_wqs_advanced_risk.py  test_wqs_base_score.py  test_wqs_properties.py
scout/tools/: health_check.py  telegram_config.yaml
(+627 files in other folders)
