[package]
name = "chimera_operator"
version = "7.1.0"
edition = "2021"

[dependencies]
# Core Async Runtime
tokio = { version = "1.37", features = ["full", "sync"] }
tokio-util = "0.7"


# Web Framework (Ingress)
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }

# Security & Rate Limiting
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
tower_governor = "0.4"
jsonwebtoken = "9.2"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.2"

# Caching - upgraded to fix RUSTSEC-2021-0145 and RUSTSEC-2026-0002
lru = "0.13"

# Solana Interaction
# Stay on Solana 3.x for stable dependencies (Solana 4.0 has version conflicts)
solana-sdk = "3"
solana-client = "3"
solana-transaction-status = { version = "3", features = ["agave-unstable-api"] }
solana-account-decoder = "3"
solana-system-interface = { version = "2.0", features = ["bincode"] }
solana-program = "3"
# Solana modular crates
solana-commitment-config = "3"
solana-transaction = "3"
solana-message = "3"
solana-address-lookup-table-interface = "3" 

# Database (SQLite + WAL) - upgraded to 0.8 to fix security advisories
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Configuration
config = "0.15"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
bincode = { version = "2.0.1", features = ["serde"] }
bincode1 = { package = "bincode", version = "1.3" }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
async-trait = "0.1"
once_cell = "1.20"
parking_lot = "0.12"
futures-util = "0.3"

# HTTP Client for Telegram notifications and RPC
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.27"

# Prometheus metrics
prometheus = "0.14.0"

# PDF generation - upgraded to eliminate kuchiki security advisory
printpdf = "0.8.2"

# Random number generation
rand = "0.9"

# Memory Security
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# Math
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1"
sysinfo = "0.38.4"

[dev-dependencies]
# Testing utilities
axum-test = "18.4.1"
tempfile = "3.23"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.37", features = ["test-util"] }
