[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chimera-scout"
version = "1.0.0"
description = "Chimera Wallet Intelligence Layer"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Ignore common warnings for existing codebase
ignore = ["E501", "W293", "I001"]

[tool.ruff.lint.per-file-ignores]
# Test files can have longer lines
"tests/**/*.py" = ["E501"]
